--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -14,19 +14,23 @@
     </div>
             
     <div class="row-fluid">
-        <nav class="span2">
-            <ul class="nav nav-pills nav-stacked">
-                <li class="nav-header">List header</li>
-                <li class="active"><a href="{{ path('welcome') }}"><i class="icon-white icon-home"></i> Home</a></li>
-                <li class="nav-header">Another list header</li>
-                <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-edit"></i> Profile</a></li>
-                <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
-                <li class="divider"></li>
-                <li><a href="{{ path('fos_user_resetting_request') }}">Reset Password</a></li>
-                <li><a href="{{ path('fos_user_change_password') }}">Change Password</a></li>
-                <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
-            </ul>
-        </nav>
+        <div class="span2">
+            <nav>
+                <ul class="nav nav-pills nav-stacked">
+                    <li class="nav-header">List header</li>
+                    <li class="active"><a href="{{ path('welcome') }}"><i class="icon-white icon-home"></i> Home</a></li>
+                    <li class="nav-header">Another list header</li>
+                    <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-edit"></i> Profile</a></li>
+                    <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
+                    <li class="divider"></li>
+                    <li><a href="{{ path('fos_user_resetting_request') }}">Reset Password</a></li>
+                    <li><a href="{{ path('fos_user_change_password') }}">Change Password</a></li>
+                    <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                </ul>
+            </nav>
+            <a href="javascript:void(0)" onclick="javascript:chatWith('adam')">Chat With Adam</a>
+            <a href="javascript:void(0)" onclick="javascript:chatWith('john')">Chat With John</a>
+        </div>
         <div class="span8">
             <section>
                 <h3>
