--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -28,8 +28,12 @@
                     <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
                 </ul>
             </nav>
-            <a href="javascript:void(0)" onclick="javascript:chatWith('adam')">Chat With Adam</a>
-            <a href="javascript:void(0)" onclick="javascript:chatWith('john')">Chat With John</a>
+            <section>
+                <h3>Chat Test</h3>
+                <a href="javascript:void(0)" onclick="javascript:chatWith('adam')">Chat With Adam</a>
+                <br>
+                <a href="javascript:void(0)" onclick="javascript:chatWith('john')">Chat With John</a>
+            </section>
         </div>
         <div class="span8">
             <section>
