--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -19,6 +19,7 @@
                 <ul class="nav nav-pills nav-stacked">
                     <li class="nav-header">List header</li>
                     <li class="active"><a href="{{ path('welcome') }}"><i class="icon-white icon-home"></i> Home</a></li>
+                    <li><a href="{{ path('events') }}">Events</a></li>
                     <li class="nav-header">Another list header</li>
                     <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-edit"></i> Profile</a></li>
                     <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
