--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,10 +1,9 @@
 {% extends 'MopaBootstrapBundle::base_initializr.html.twig' %}
 
 {% block head_style %}
-{{ parent() }}
+{#{ parent() }#}
 {% stylesheets
     '@BangnationCommonBundle/Resources/public/sass/mopabootstrapbundle.scss'
-    '@BangnationCommonBundle/Resources/public/css/ticker-style.css'
 %}
 <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
 {% endstylesheets %}
