--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -39,10 +39,13 @@
             </ul>
         </nav>
         <section>
-            <h3>Chat Test</h3>
-            <a href="javascript:void(0)" onclick="javascript:chatWith('adam')">Chat With Adam</a>
-            <br>
-            <a href="javascript:void(0)" onclick="javascript:chatWith('john')">Chat With John</a>
+            {% render "BangnationUserBundle:User:friends" %}
+        </section>        
+        <section>
+            {% render "BangnationUserBundle:User:friendRequests" %}
+        </section>        
+        <section>
+            {% render "BangnationUserBundle:User:friendsInverse" %}
         </section>
     </div>
     {% block content %}
